# eyrc-25-26_krishi_drone

./: .gitmodules  README.md
swift_pico/: CMakeLists.txt  package.xml
